[gd_scene load_steps=9 format=3 uid="uid://c2u5cdbffm38"]

[ext_resource type="Script" uid="uid://3p8s0v12rn8i" path="res://MissionPlanningScreen/Podium/Podium.gd" id="1_m1her"]
[ext_resource type="PackedScene" uid="uid://ddamrtusv1jg5" path="res://ClickableArea3D/ClickableArea3D.tscn" id="2_2tp5t"]

[sub_resource type="CylinderMesh" id="CylinderMesh_m1her"]
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2tp5t"]
albedo_color = Color(0.556953, 0.556953, 0.556953, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_m1her"]
viewport_path = NodePath("UnoccupiedUI old/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_2tp5t"]
viewport_path = NodePath("OccupiedUI old/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_vqfkk"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_1mi44"]
viewport_path = NodePath("SubViewport")

[node name="Podium" type="Node3D"]
script = ExtResource("1_m1her")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_m1her")
surface_material_override/0 = SubResource("StandardMaterial3D_2tp5t")

[node name="UnoccupiedUI old" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
texture = SubResource("ViewportTexture_m1her")

[node name="SubViewport" type="SubViewport" parent="UnoccupiedUI old"]
transparent_bg = true
size = Vector2i(128, 128)

[node name="Add" type="Button" parent="UnoccupiedUI old/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_right = 55.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+ Add Solider"

[node name="OccupiedUI old" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.580479, 0.328602)
visible = false
texture = SubResource("ViewportTexture_2tp5t")

[node name="SubViewport" type="SubViewport" parent="OccupiedUI old"]
transparent_bg = true

[node name="VBoxContainer" type="VBoxContainer" parent="OccupiedUI old/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -33.0
offset_right = 44.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Customize" type="Button" parent="OccupiedUI old/SubViewport/VBoxContainer"]
layout_mode = 2
text = "Customize"

[node name="Remove" type="Button" parent="OccupiedUI old/SubViewport/VBoxContainer"]
layout_mode = 2
text = "Removeüêµ"

[node name="UnoccupiedUI" type="Node3D" parent="."]

[node name="Add" parent="UnoccupiedUI" instance=ExtResource("2_2tp5t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
texture = SubResource("ViewportTexture_vqfkk")
text = "Add"

[node name="OccupiedUI" type="Node3D" parent="."]

[node name="Remove" parent="OccupiedUI" instance=ExtResource("2_2tp5t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.507098)
texture = SubResource("ViewportTexture_1mi44")
text = "Remove"

[connection signal="pressed" from="OccupiedUI old/SubViewport/VBoxContainer/Customize" to="." method="_on_customize_pressed"]
[connection signal="pressed" from="UnoccupiedUI/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="OccupiedUI/Remove" to="." method="_on_remove_pressed"]
